--- a/Project/AndroidManifest.xml
+++ b/Project/AndroidManifest.xml
@@ -100,6 +100,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.yu.cvs.shop.CCommodityInfoActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.yu.cvs.intent.CommodityInfo.view" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
